--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     justify-content: space-around;
     text-align: center;
     background: #BC9896;
-    color: #35281E;
+    color: #a14343;
     border-bottom: 6px solid #A2664E;
      border-left: 6px solid #A2664E;
     border-radius: 30px 0px 30px 0px;
